--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "chatApp",
   "version": "1.0.0",
-  "description": "",
+  "description": "chat application for standalone and video project",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/samurai71/chatApp.git"
+    "url": "https://github.com/samurai71/chatApp"
   },
   "keywords": [],
-  "author": "Mark Landeryou",
+  "author": "TVR",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/samurai71/chatApp/issues"
-  },
-  "homepage": "https://github.com/samurai71/chatApp",
   "dependencies": {
     "express": "^4.16.2",
-    "grunt": "^1.0.1"
+    "socket.io": "^2.0.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-uglify-es": "git://github.com/gruntjs/grunt-contrib-uglify.git#harmony"
+  }
 }
